Update build.yml labels more

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
     # hdd=50 is somewhat arbitrary here, but seems to give a
     # 77G disk, which is sufficient for ISO builds.
     # The VM runners are named "x64", not "amd64" like other docker things.
-    runs-on: runs-on,runner=4cpu-linux-${{ matrix.arch == 'amd64' && 'x64' || matrix.arch }}
+    runs-on: runner=4cpu-linux-${{ matrix.arch == 'amd64' && 'x64' || matrix.arch }}
     permissions:
       contents: read
       id-token: write # for reading credential https://github.com/rancher-eio/read-vault-secrets
@@ -100,7 +100,7 @@ jobs:
 
   manifest-cluster-repo-image:
     name: Manifest harvester-cluster-repo image
-    runs-on: runs-on,runner=4cpu-linux-x64
+    runs-on: runner=4cpu-linux-x64
     needs: build-iso
     if: ${{ startsWith(github.ref, 'refs/heads/') }}
     permissions:
