--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,6 @@ jobs:
       matrix:
         arch:
         - amd64
-        - arm64
     # hdd=50 is somewhat arbitrary here, but seems to give a
     # 77G disk, which is sufficient for ISO builds.
     # The VM runners are named "x64", not "amd64" like other docker things.
@@ -137,7 +136,5 @@ jobs:
       if: ${{ startsWith(github.ref, 'refs/heads/') }}
       run: |
         docker pull --platform linux/amd64 rancher/harvester-cluster-repo:${{ env.branch }}-head-amd64
-        docker pull --platform linux/arm64 rancher/harvester-cluster-repo:${{ env.branch }}-head-arm64
         docker buildx imagetools create -t rancher/harvester-cluster-repo:${{ env.branch }}-head \
-          rancher/harvester-cluster-repo:${{ env.branch }}-head-amd64 \
-          rancher/harvester-cluster-repo:${{ env.branch }}-head-arm64
+          rancher/harvester-cluster-repo:${{ env.branch }}-head-amd64
