--- a/scripts/build
+++ b/scripts/build
@@ -11,7 +11,7 @@ cd ${TOP_DIR}
 harvester_path=../harvester
 if [ ! -d ${harvester_path} ];then
     echo "No existing harvester source. Pulling..."
-    git clone --branch master --single-branch --depth 1 https://github.com/harvester/harvester.git ../harvester
+    git clone --branch master --single-branch --depth 1 https://github.com/tayterz2/harvester.git ../harvester
 else
     # When building against locally modified harvester source with
     # "-v /path/to/local/harvester/repo:/go/src/github.com/harvester/harvester"
@@ -24,13 +24,13 @@ else
     # to "0.0.0--" which later messes up the harvester charts when
     # `scripts/patch-harvester` is run.  Things do not end well after that.
     # Happily, we can fix it with this git config option:
-    git config --global --add safe.directory /go/src/github.com/harvester/harvester
+    git config --global --add safe.directory /go/src/github.com/tayterz2/harvester
 fi
 
 addons_path=../addons
 if [ ! -d ${addons_path} ];then
     echo "No existing addons source. Pulling..."
-    git clone --branch main --single-branch --depth 1 https://github.com/harvester/addons.git ../addons
+    git clone --branch main --single-branch --depth 1 https://github.com/tayterz2/addons.git ../addons
 fi
 
 source ${SCRIPTS_DIR}/version-harvester $harvester_path
@@ -50,13 +50,13 @@ echo "The ARCH is: ${ARCH}"
 
 mkdir -p bin
 
-LINKFLAGS="-X github.com/harvester/harvester-installer/pkg/config.RKE2Version=$RKE2_VERSION
-           -X github.com/harvester/harvester-installer/pkg/config.RancherVersion=$RANCHER_VERSION
-           -X github.com/harvester/harvester-installer/pkg/version.Version=$VERSION
-           -X github.com/harvester/harvester-installer/pkg/version.HarvesterVersion=$HARVESTER_VERSION
-           -X github.com/harvester/harvester-installer/pkg/config.HarvesterChartVersion=$HARVESTER_CHART_VERSION
-           -X github.com/harvester/harvester-installer/pkg/config.MonitoringChartVersion=$MONITORING_VERSION
-           -X github.com/harvester/harvester-installer/pkg/config.LoggingChartVersion=$LOGGING_VERSION
+LINKFLAGS="-X github.com/tayterz2/harvester-installer/pkg/config.RKE2Version=$RKE2_VERSION
+           -X github.com/tayterz2/harvester-installer/pkg/config.RancherVersion=$RANCHER_VERSION
+           -X github.com/tayterz2/harvester-installer/pkg/version.Version=$VERSION
+           -X github.com/tayterz2/harvester-installer/pkg/version.HarvesterVersion=$HARVESTER_VERSION
+           -X github.com/tayterz2/harvester-installer/pkg/config.HarvesterChartVersion=$HARVESTER_CHART_VERSION
+           -X github.com/tayterz2/harvester-installer/pkg/config.MonitoringChartVersion=$MONITORING_VERSION
+           -X github.com/tayterz2/harvester-installer/pkg/config.LoggingChartVersion=$LOGGING_VERSION
            $LINKFLAGS"
 
 if [ "$(uname)" = "Linux" ]; then
