--- a/scripts/build
+++ b/scripts/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -e
 
-TOP_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )/.." &> /dev/null && pwd )"
+TOP_DIR=/home/github/actions-runner/_work/harvester-installer/harvester-installer
 SCRIPTS_DIR="${TOP_DIR}/scripts"
 PACKAGE_HARVESTER_OS_DIR="${TOP_DIR}/package/harvester-os"
 
