use some local images when we can

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
 
     # Build ISO
     - name: Run make ci
-      run: make ci
+      run: USE_LOCAL_IMAGES=true make ci
 
     # Below is essentially duplicated from the main Harvester repo's
     # .github/workflows/build.yml, except we're only publishing branches,
