--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
     # hdd=50 is somewhat arbitrary here, but seems to give a
     # 77G disk, which is sufficient for ISO builds.
     # The VM runners are named "x64", not "amd64" like other docker things.
-    runs-on: self-hosted
+    runs-on: codebuild-HarvesterAutoInstaller-${{ github.run_id }}-${{ github.run_attempt }}
     permissions:
       contents: read
       id-token: write # for reading credential https://github.com/rancher-eio/read-vault-secrets
@@ -55,37 +55,6 @@ jobs:
           secret/data/github/repo/${{ github.repository }}/dockerhub/harvester/credentials password | DOCKER_PASSWORD ;
           secret/data/github/repo/${{ github.repository }}/google-auth-key/credentials credential | GOOGLE_AUTH ;
 
-    - name: Login to Docker Hub
-      if: ${{ startsWith(github.ref, 'refs/heads/') }}
-      uses: docker/login-action@v3
-      with:
-        username: ${{ env.DOCKER_USERNAME }}
-        password: ${{ env.DOCKER_PASSWORD }}
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    # rancher/harvester-cluster-repo image
-    - name: docker-publish-harvester-cluster-repo
-      if: ${{ startsWith(github.ref, 'refs/heads/') }}
-      uses: docker/build-push-action@v6
-      with:
-        context: dist/harvester-cluster-repo
-        push: true
-        platforms: linux/${{ matrix.arch }}
-        tags: rancher/harvester-cluster-repo:${{ env.branch }}-head-${{ matrix.arch }}
-        file: dist/harvester-cluster-repo/Dockerfile
-        sbom: true
-        provenance: mode=max
-
-    - name: Login to Google Cloud
-      if: ${{ startsWith(github.ref, 'refs/heads/') }}
-      uses: 'google-github-actions/auth@v2'
-      with:
-        credentials_json: '${{ env.GOOGLE_AUTH }}'
-
     - name: upload-iso
       uses: 'google-github-actions/upload-cloud-storage@v2'
       if: ${{ startsWith(github.ref, 'refs/heads/') }}
@@ -96,45 +65,3 @@ jobs:
         predefinedAcl: publicRead
         headers: |-
           cache-control: public,no-cache,proxy-revalidate
-
-  manifest-cluster-repo-image:
-    name: Manifest harvester-cluster-repo image
-    runs-on: self-hosted
-    needs: build-iso
-    if: ${{ startsWith(github.ref, 'refs/heads/') }}
-    permissions:
-      contents: read
-      id-token: write # for reading credential https://github.com/rancher-eio/read-vault-secrets
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Declare branch
-      run: |
-        echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> "$GITHUB_ENV"
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Read Secrets
-      uses: rancher-eio/read-vault-secrets@main
-      with:
-        secrets: |
-          secret/data/github/repo/${{ github.repository }}/dockerhub/harvester/credentials username | DOCKER_USERNAME ;
-          secret/data/github/repo/${{ github.repository }}/dockerhub/harvester/credentials password | DOCKER_PASSWORD ;
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ env.DOCKER_USERNAME }}
-        password: ${{ env.DOCKER_PASSWORD }}
-
-    # rancher/harvester-cluster-repo image
-    - name: docker-pull-harvester-cluster-repo
-      if: ${{ startsWith(github.ref, 'refs/heads/') }}
-      run: |
-        docker pull --platform linux/amd64 rancher/harvester-cluster-repo:${{ env.branch }}-head-amd64
-        docker buildx imagetools create -t rancher/harvester-cluster-repo:${{ env.branch }}-head \
-          rancher/harvester-cluster-repo:${{ env.branch }}-head-amd64
