--- a/scripts/build
+++ b/scripts/build
@@ -11,7 +11,7 @@ cd ${TOP_DIR}
 harvester_path=../harvester
 if [ ! -d ${harvester_path} ];then
     echo "No existing harvester source. Pulling..."
-    git clone --branch master --single-branch --depth 1 https://github.com/tayterz2/harvester.git ../harvester
+    git clone --branch v1.5 --single-branch --depth 1 https://github.com/harvester/harvester.git ../harvester
 else
     # When building against locally modified harvester source with
     # "-v /path/to/local/harvester/repo:/go/src/github.com/harvester/harvester"
